# gcp_secret_manager_wrapper

./: .gitattributes  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-to-test-pypi.yml
crypto_secret_manager/: __init__.py  gcp.py
gcp_secret_manager_wrapper/: __init__.py
