[project]
name = "gcp_secret_manager_wrapper"
version = "0.0.1"
description = "Python wrapper for Secret Manager"
authors = "onsentamago <ontama_minimal@protonmail.com>"
license = "AGPL-3.0-or-later"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/onsentamago/gcp_secret_manager_wrapper"
repository = "https://github.com/onsentamago/gcp_secret_manager_wrapper"
documentation = "https://github.com/onsentamago/gcp_secret_manager_wrapper"

keywords = ["GCP", "Secret Manager"]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Cloud Tools',
    'Programming Language :: Python :: 3.8',
]

[dependencies]
google-cloud-secret-manager = "^2.1.0"

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3",
    "wheel"
]
build-backend = "setuptools.build_meta"