[metadata]
name = gcp_secret_manager_wrapper
version = 0.0.1
description = GCP Secret Manager wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onsentamago/gcp_secret_manager_wrapper
license_files = LICENSE.txt
author = onsentamago

[options]
packages = find:
install_requires =
    google-cloud-secret-manager ~= 2.1.0
